--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
    </div>
 </div>
   
-<div>
+<div align="center">
     <br>
     <p align="center">
     <img src="./assets/icons/csharp.png" alt="csharp">
@@ -52,11 +52,10 @@
     <img src="./assets/icons/web.png" alt="web">
     <img src="./assets/icons/datascience.png" alt="data_science">
     </p>
-
     <br>
     <h2 align="center"> 📥 𝘾𝙤𝙣𝙩𝙖𝙘𝙩 𝙢𝙚 📥 </h2>
     <div align="center">
-        <img src="" alt="idksmtcute" align="right" width="373.5px" height="208.5px">
+        <!-- <img src="" alt="idksmtcute" align="right" width="373.5px" height="208.5px"> -->
     </div>
     <br>
     <p align="center">
@@ -66,13 +65,13 @@
         <a href="https://www.instagram.com/paunov0000"><img src="./assets/icons/instagram.png">
         <a href="https://www.linkedin.com/in/lachezar-paunov-aa38b5250"><img src="./assets/icons/linkedin.png" alt="linkedin"></a>
 </div>
-    <br>
+<br>
+<div>
+    <h2 align="center"> 🖤 𝘛𝘩𝘢𝘯𝘬𝘴 𝘧𝘰𝘳 𝘳𝘦𝘢𝘥𝘪𝘯𝘨 🖤 </h2>
     <div align="center">
-        <h2 align="center"> 🖤 𝘛𝘩𝘢𝘯𝘬𝘴 𝘧𝘰𝘳 𝘳𝘦𝘢𝘥𝘪𝘯𝘨 🖤 </h2>
-        <div align="center">
-            <img src="" alt="smtcuteidklolll">
-        </div>
-        <hr>
+        <img src="./assets/cute.gif" alt="smtcuteidklolll">
     </div>
+<hr>
+</div>
     </center>
 </body>
